--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,13 +1,22 @@
-<h1>My first web page</h1>
-<h2>Written with the guidance of Epicodus</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Web page #1!</title>
+  </head>
+  <body>
 
-<p>This is my first web page!</p>
-<p>Isn't it nice?</p>
+    <h1>My first web page</h1>
+    <h2>Written with the guidance of Epicodus</h2>
 
-<p>Here are some things I'm going to learn about coding:</p>
-<ul>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>JavaScript</li>
-  <li>And a lot more!</li>
-</ul>
+    <p>This is my first web page!</p>
+    <p>Isn't it nice?</p>
+
+    <p>Here are some things I'm going to learn about coding:</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ul>
+  </body>
+</html>
