--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,11 +4,11 @@
     <title>Web page #1!</title>
   </head>
   <body>
-
+    <img src="http://lorempixel.com/400/200/" alt="a picture">
     <h1>My first web page</h1>
-    <h2>Written with the guidance of Epicodus</h2>
+    <h2>Written with the guidance of <em>Epicodus</em></h2>
 
-    <p>This is my first web page!</p>
+    <p>This is my <strong>first web page</strong>!</p>
     <p>Isn't it nice?</p>
 
     <p>Here are some things I'm going to learn about coding:</p>
@@ -18,5 +18,7 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+
+    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
   </body>
 </html>
