--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <title>Web page #1!</title>
   </head>
   <body>
-    <img src="http://lorempixel.com/400/200/" alt="a picture">
+    <img src="img/cookie1.jpg" alt="a delicious picture">
     <h1>My first web page</h1>
     <h2>Written with the guidance of <em>Epicodus</em></h2>
 
